# github-spy

./: .env.example  .gitignore  README.md  gh_user_monitor.py  pyproject.toml
.github/workflows/: ci.yml
src/github_spy/: __init__.py  __main__.py  cli.py  client.py  models.py  monitor.py  output.py  storage.py
src/github_spy/collectors/: events.py  followers.py  profile.py  repos.py  stars.py
tests/: conftest.py  test_cli.py  test_client.py  test_collectors.py  test_export.py  test_models.py  test_monitor.py  test_output.py  test_storage.py
